# ssmbak

./: .env  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy-template.yml  ecr.yml  publish.yml  test.yml
docs/: conf.py  index.rst  modules.rst  requirements.txt  ssmbak.backup.rst  ssmbak.cli.rst  ssmbak.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  ssmbak.backup.doctree  ssmbak.cli.doctree  ssmbak.doctree  ssmbak.restore.doctree
docs/_build/doctrees/apidoc/: modules.doctree  ssmbak.backup.doctree  ssmbak.cli.doctree  ssmbak.doctree  ssmbak.restore.doctree
docs/apidoc/: ssmbak.restore.rst  ssmbak.rst
scripts/: build_template.py
ssmbak/: typing.py
ssmbak/backup/: Dockerfile  ssmbak.py
ssmbak/cli/: backup_all.py  cfn.py  cli.py  helpers.py  stack.py
ssmbak/data/: cfn.yml
ssmbak/restore/: actions.py  aws.py
tests/: conftest.py  helpers.py  local_lambda.py  localstack_env.sh  safety.py  test_cfn_template.py  test_deletemarker_bug.py  test_key.py  test_localstack.sh  test_multiregion.py  test_path.py  test_ssmbak.py  test_stale_deletemarker_bug.py  test_use_tags.py  verify_cli_tutorial.sh
tests/helper_files/: aws.json  aws_update_securestring.json  create.json  create.sab.json  create_desc.json  delete.json  update.json  update_desc.json  update_secure.json
