[tool.poetry]
name = "ssmbak"
license = "MIT"
repository = "https://github.com/newvoll/ssmbak"
homepage = "https://github.com/newvoll/ssmbak"
version = "0.2.1"
description = "Event-driven SSM Param backups and point-in-time restore."
authors = ["olmouse <olmouse@newvoll.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.39"
prettytable = "^3.5.0"
cfn-lint = "^1.40.4"
typing-extensions = {version = "^4.0", python = "<3.11"}

[tool.poetry.scripts]
ssmbak = "ssmbak.cli.cli:main"
ssmbak-all = "ssmbak.cli.backup_all:main"
ssmbak-stack = "ssmbak.cli.stack:main"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"
pylint = "^3.2.2"
pre-commit = "^3.7.1"
isort = "^5.13.2"
pdoc3 = "^0.10.0"
mypy = "^1.14.0"
requests = "^2.32.3"
pysocks = "^1.7.1"
awscli-local = "^0.22.0"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
boto3-stubs = {extras = ["cloudformation", "s3", "ssm"], version = "^1.40.70"}
types-pyyaml = "^6.0.12.20250915"

[tool.mypy]
python_version = "3.10"
files = ["ssmbak"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pylint]
ignored-classes = ["pytest"]
ignore-paths = '^docs/'


[tool.poetry.urls]
Homepage = "https://github.com/newvoll/ssmbak"
Documentation = "https://ssmbak.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/newvoll/ssmbak"
Issues = "https://github.com/newvoll/ssmbak/issues"
